--- a/createx/index.html
+++ b/createx/index.html
@@ -111,7 +111,7 @@
         </header>
 
         <main class="main">
-            <section class="about">
+            <section class="main_about about">
                 <div class="container">
                     <div class="about__inner">
                         <div class="about__createx">
@@ -177,7 +177,7 @@
                     </div>
                 </div>
             </section>
-            <section class="directions">
+            <section class="main_directions directions">
                 <div class="container">
                     <div class="directions__inner">
                         <div class="directions__heading ">
@@ -321,37 +321,39 @@
                     </div>
                 </div>
             </section>
-
-
-            <section class="cert">
+            <section class="main__cert cert">
                 <div class="container">
-                    <div class="cert__inner">
-                        <div class="cert__content">
-                            <div class="cert__heading">
-                                <p class="cert__subtitle">Createx Certificate</p>
-                                <h2 class="cert__title">Your expertise will be confirmed</h2>                               
-                                <p class="cert__paragraph">We are accredited by international professional organizations
+                    <div class="sert__inner">
+                        <div class="sert__content">
+                            <div class="cert__heading heading">
+                                <p class="heading__subtitle">Createx Certificate</p>
+                                <h2 class="heading__title">Your expertise will be confirmed</h2>
+                                                          
                             </div>
-
-                            <div class="cert__image-logo-box">
-                                <img src="images/logos/1.svg" alt="1">
-                                <img src="images/logos/2.svg" alt="2">
-                                <img src="images/logos/3.svg" alt="3">
-                            </div>
+                            <p class="sert__text">
+                                We are accredited by international professional organizations and institutes:
+                            </p>  
+                            <ul class="sert__logos">
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/1.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/2.svg" alt="">
+                                </li>
+                                <li class="sert__logos-item">
+                                    <img src="images/logos/3.svg" alt="">
+                                </li>
+                            </ul>
                         </div>
-
-
-
-                        <div class="cert__image-box">
-                            <img src="images/award.jpg" alt="">
+                        <div class="sert__image-box">
+                            <img src="images/award.jpg" alt="Сертификат">
                         </div>
-
                     </div>
                 </div>
+
+
+
             </section>
-
-
-
         </main>
 
         <footer class="footer"></footer>
