--- a/createx/index.html
+++ b/createx/index.html
@@ -739,6 +739,53 @@
                                     </div>
 
                             </div>
+                            <div class="test__slide">
+                                <div class="test__content">
+                                    <img src="images/icons/quote-icon.svg" alt="">
+                                    <p class="test__paragraph">
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Justo, amet lectus
+                                        quam viverra
+                                        mus lobortis fermentum amet, eu. Pulvinar eu sed purus facilisi. Vitae id
+                                        turpis tempus
+                                        ornare turpis quis non. Congue tortor in euismod vulputate etiam eros.
+                                        Pulvinar neque
+                                        pharetra arcu diam maecenas diam integer in.
+                                    </p>
+
+
+                                </div>
+                                <div class="test__photo">
+                                    <img src="images/image.jpg" alt="Image">
+                                    <div class="test__photo_name">
+                                        <p class="test_name">Eleanor Pena</p>
+                                        <p class="test__position">Position, Course</p>
+                                    </div>
+                                </div>
+
+
+
+                            </div>
+                            <div class="test__slide">
+                                <div class="test__content">
+                                    <img src="images/icons/quote-icon.svg" alt="">
+                                    <p class="test__paragraph">
+                                        Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные
+                                        тексты. Прямо своего всеми использовало вскоре безопасную себя щеке жизни
+                                        диких заманивший наш единственное текстов домах, маленькая парадигматическая
+                                        вопрос буквоград рукописи.
+                                    </p>
+
+
+                                </div>
+                                <div class="test__photo">
+                                    <img src="images/image.jpg" alt="Image">
+                                    <div class="test__photo_name">
+                                        <p class="test_name">Eleanor Pena</p>
+                                        <p class="test__position">Position, Course</p>
+                                    </div>
+                                </div>
+
+                        </div>
 
                          
                                 
