--- a/createx/index.html
+++ b/createx/index.html
@@ -678,9 +678,6 @@
                             <h2 class="heading__title">
                                 What our students say
                             </h2>
-
-
-
                         </div>
                         <div class="testimonials__slider-wrapper">
                             <div class="testimonials__slider">
@@ -843,7 +840,73 @@
                     </div>
                 </div>
             </section>
+
+            <section class="main__companies companies">
+                <div class="container">
+                    <div class="companies__inner">
+                        <div class="companies__heading heading heading--center">
+                            <p class="heading__subtitle">best jobs for you</p>
+                            <h2 class="heading__title">
+                                Our students work here
+                            </h2>
+                        </div>
+
+                        <div class="companies__logos-box">
+
+                            <a href="">
+
+                                <img src="images/logos/logo-10.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-8.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-9.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-6.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-5.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-11.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-4.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-2.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-7.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-1.svg" alt="logo">
+                            </a>
+                            <a href="#">
+
+                                <img src="images/logos/logo-3.svg" alt="logo">
+                            </a>
+
+
+                        </div>
+                        
         </main>
+
 
         <footer class="footer"></footer>
     </div>
