--- a/createx/index.html
+++ b/createx/index.html
@@ -845,6 +845,80 @@
             </section>
         </main>
 
+        <section class="main__companies companies">
+            <div class="container">
+              <div class="companies__inner">
+                <div class="companies__heading heading heading--text-center">
+                  <p class="heading__subtitle">best jobs for you</p>
+                  <h2 class="heading__title">Our students work here</h2>
+                </div>
+                <ul class="companies__grid">
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                  <li class="companies__grid-item">
+                    <a class="companies__grid-link" href="#">
+                      <img src="images/logos/logo-11.svg" alt="">
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </section>
+
+
         <footer class="footer"></footer>
     </div>
 
